--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -15,7 +15,7 @@ RUN yarn install
 COPY . .
 
 # Creates a "dist" folder with the production build
-RUN npm run build
+RUN yarn build
 
 # Start the server using the production build
 CMD [ "node", "dist/main.js" ]
